results/file/very_large_file_read/very_large_json_read_node_resources.txt
file:///root/bun-vs-node/tests/file/very_large_file_read/json_read_node.js:1
import { createReadStream, join } from 'fs';
                           ^^^^
SyntaxError: The requested module 'fs' does not provide an export named 'join'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:134:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:217:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:316:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:123:5)

Node.js v20.16.0
Command exited with non-zero status 1
	Command being timed: "node /root/bun-vs-node/tests/file/very_large_file_read/json_read_node.js"
	User time (seconds): 0.03
	System time (seconds): 0.03
	Percent of CPU this job got: 29%
	Elapsed (wall clock) time (h:mm:ss or m:ss): 0:00.26
	Average shared text size (kbytes): 0
	Average unshared data size (kbytes): 0
	Average stack size (kbytes): 0
	Average total size (kbytes): 0
	Maximum resident set size (kbytes): 41828
	Average resident set size (kbytes): 0
	Major (requiring I/O) page faults: 268
	Minor (reclaiming a frame) page faults: 2072
	Voluntary context switches: 303
	Involuntary context switches: 2
	Swaps: 0
	File system inputs: 59952
	File system outputs: 0
	Socket messages sent: 0
	Socket messages received: 0
	Signals delivered: 0
	Page size (bytes): 4096
	Exit status: 1
